# hexlet-django-blog

./: .gitignore  Makefile  db.sqlite3  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/templates/: base.html  index.html
hexlet_django_blog/templates/article/: index.html  show.html
