[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["Ramil Albakov <ramil.albakov2@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_django_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
django-extensions = "^3.2.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
